Ajout d'un socle sécurité, hateoas, jwt, gestions des erreurs, interfaces de services générique, swagger